cloudtemplate.yml

# Build an EC2 instance as Homework
AWSTemplateFormatVersion: '2010-09-09'

Description: This is my EC2 instance for Homework 1 

Parameters: # it is an optional section
  KeyNameParameter: 
    Description: Amazon EC2 Key Pair Name
    Type: AWS::EC2::KeyPair::KeyName
    Default: awesomekeypair      
    ConstraintDescription : EC2 Key Pair must exist
    MinLength: 5
    MaxLength: 25
  ImageIdParameter: # This is a parameter Name or logical id
    Type: String  # The data type
    Default: ami-0ff8a91507f77f867
    AllowedValues:
      - ami-0ff8a91507f77f867
      - ami-0bdb828fd58c52235
      - ami-047bb4163c506cd98
      - ami-08569b978cc4dfa10
    ConstraintDescription : ImageId must exist and start with ami
  SubnetIdsParameter:
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-02280cb7e022ea5a4
    Description: Select at least one subnet to deploy your instance
  SecurityGroupIdParameter: 
    Type: List<AWS::EC2::SecurityGroup::Id>
    Default: sg-0ab11eba90d37bc4a
    Description: Select at least one security group 
  InstanceTypeParameter: # This is a parameter Name or logical id
    Type: String  # The data type
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, t3.micro, m1.small, or m1.large. Default is t2.micro.

Mappings: # this is mapping section (automatically assign fixed values base on conditions)
  RegionAndInstanceTypeMap: #This is mapping the Region to ami and the Region to Instance Type
    us-east-1: # This is the first top level key or the first condition of our mapping
      "HVM64": "ami-0ff8a91507f77f867"  #this is the second level key (common to all conditions or top level keys), and his value
      "HVMG2": "t2.micro"
    us-west-1: #This is the second top level key or the second condition of our mapping
      "HVM64": "ami-0bdb828fd58c52235"
      "HVMG2": "t3.micro"
    eu-west-1: #This is the third top level key or the third condition of our mapping
      "HVM64": "ami-047bb4163c506cd98"
      "HVMG2": "m1.small"
    ap-southeast-1: 
      "HVM64": "ami-08569b978cc4dfa10"
      "HVMG2": "m1.large"

Resources:  # The only Required section
  MyEC2InstanceHomework:  # logical id or logical Name
    Type: AWS::EC2::Instance  # Resource identifier
    Properties: 
      ImageId: !FindInMap [RegionAndInstanceTypeMap, !Ref AWS::Region, HVM64]
      InstanceType: !FindInMap [RegionAndInstanceTypeMap, !Ref AWS::Region, HVMG2] 
      SecurityGroups: 
      - Ref: InstanceSecurityGroup   
      Tags: 
        - Key: Name
          Value: Ivan Minang 
        - Key: Alias
          Value: Yvanov
  MyEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref MyEC2InstanceHomework
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: InstanceSecurityGroup
      GroupDescription: Open port 80 to the internet and lock down port 22 to my personal IP address
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 76.125.179.42/32
Outputs:
  SecurityGroupName:
    Description: Display The SecurityGroup Name
    Value: !Ref InstanceSecurityGroup
    Export:
      Name: MinangSecurityGroup
  InstancePublicIp:
    Description: Display The Instance Public Ip
    Value: !GetAtt MyEC2InstanceHomework.PublicIp
    Export:
      Name: MinangInstance
